# AIAdminBot

./: .dockerignore  .flake8  .gitignore  LICENSE  Procfile  README.md  commands.txt  pyproject.toml  requirements.dev.txt  requirements.txt  run.py  word.py
.github/workflows/: code_style_check.yml  linting.yml  notify.yml
app/: full.py  generators.py  helpers.py  utils.py
app/handlers/: __init__.py  ai.py  base.py  payment.py
apps/bot/: api_client.py  decorators.py  urls.py  utils.py
apps/bot/admin/: chat_history.py  feedback.py  payments.py  users.py
apps/bot/google/: ai_studio.py
apps/bot/handlers/: __init__.py  ai.py  base.py  feedback.py  payment.py  web_app_info.py
apps/bot/management/commands/: create_admin.py  runbot.py
apps/bot/migrations/: 0001_initial.py  0002_telegramuser_is_active_alter_telegramuser_full_name_and_more.py
apps/bot/models/: __init__.py  chat_history.py  feedback.py  payments.py  users.py
apps/bot/serializers/: chat_history.py  feedbacks.py  payments.py  users.py
apps/bot/services/: base.py  chat_history.py  feedback.py  payments.py  users.py
apps/bot/views/: __init__.py  chat_history.py  feedbacks.py  payments.py  users.py  webhook.py
apps/shared/views/: dashboard.py
assets/templates/: index.html
assets/templates/admin/: index.html
core/: settings.py  urls.py
core/config/: jwt.py  rest_framework.py
